# websocket-chat

./: .gitignore  README.md
.github/workflows/: rust.yml
server/: Cargo.toml
server/src/: handle.rs  main.rs
server/src/connection/: database.rs  handle.rs  mod.rs
server/src/user/: user.rs
terminal-chat/: Cargo.toml
terminal-chat/src/: app.rs  database.rs  encrypion.rs  main.rs
terminal-chat/src/frames/: custom_frame.rs  mod.rs
terminal-chat/src/frames/custom/: chat_frame.rs  login_frame.rs  mod.rs  register_frame.rs
terminal-chat/src/widgets/: chat_frame.rs  login_frame.rs  mod.rs
