[package]
name = "terminal-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
mongodb = "3.1.0"
ratatui = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }
websocket = "0.27.1"
tokio-tungstenite = "*"
url = "2.5.2"
futures-util = "0.3.30"
tungstenite = "0.24.0"
sha2 = "0.10.8"
